// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableSelect should render 1`] = `
<span>
  <div class="overlay-renderer-root"></div>
  <div class="dropdown dropdown-root searchable-select-root" id="overlay1">
    <button class="button-root btn btn-secondary dropdown-toggle" type="button">
      <span class="text-truncate">Bar </span>
      <span>
        <svg class="icon-root lexicon-icon lexicon-icon-caret-bottom">
          <use xlink:href="/images/lexicon/icons.svg#caret-bottom"></use>
        </svg>
      </span>
    </button>
  </div>
</span>
`;

exports[`SearchableSelect should render when clicked 1`] = `
<span>
  <div class="overlay-renderer-root">
    <div data-overlayid="2" id="overlay2Container" class="card overlay-container-root dropdown dropdown-root searchable-select-root" style="top: 0px; left: 0px;">
      <div class="dropdown-menu show">
        <div class="dropdown-section">
          <div class="">
            <div class="input-group input-group-inset">
              <div class="input-group-input">
                <input value="" placeholder="Foo" class="input-root form-control" type="text">
              </div>
              <span class="input-group-inset-item">
                <button class="button-root btn btn-unstyled" type="button">
                  <svg class="icon-root lexicon-icon lexicon-icon-search">
                    <use xlink:href="/images/lexicon/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </div>
        <div class="dropdown-section items-wrapper">
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item0</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item1</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item2</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item3</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item4</button>
        </div>
      </div>
    </div>
  </div>
  <div class="dropdown dropdown-root searchable-select-root" id="overlay2" active="">
    <button class="button-root btn btn-secondary dropdown-toggle" type="button">
      <span class="text-truncate">Bar </span>
      <span>
        <svg class="icon-root lexicon-icon lexicon-icon-caret-bottom">
          <use xlink:href="/images/lexicon/icons.svg#caret-bottom"></use>
        </svg>
      </span>
    </button>
  </div>
</span>
`;

exports[`SearchableSelect should render with a subheader 1`] = `
<span>
  <div class="overlay-renderer-root">
    <div data-overlayid="3" id="overlay3Container" class="card overlay-container-root dropdown dropdown-root searchable-select-root" style="top: 0px; left: 0px;">
      <div class="dropdown-menu show">
        <div class="dropdown-section">
          <div class="">
            <div class="input-group input-group-inset">
              <div class="input-group-input">
                <input value="" placeholder="Foo" class="input-root form-control" type="text">
              </div>
              <span class="input-group-inset-item">
                <button class="button-root btn btn-unstyled" type="button">
                  <svg class="icon-root lexicon-icon lexicon-icon-search">
                    <use xlink:href="/images/lexicon/icons.svg#search"></use>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </div>
        <div class="dropdown-section items-wrapper">
          <div class="dropdown-subheader">foo bar</div>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item0</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item1</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item2</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item3</button>
          <button class="button-root btn btn-secondary dropdown-item text-truncate" type="button">item4</button>
        </div>
      </div>
    </div>
  </div>
  <div class="dropdown dropdown-root searchable-select-root" id="overlay3" active="">
    <button class="button-root btn btn-secondary dropdown-toggle" type="button">
      <span class="text-truncate">Bar </span>
      <span>
        <svg class="icon-root lexicon-icon lexicon-icon-caret-bottom">
          <use xlink:href="/images/lexicon/icons.svg#caret-bottom"></use>
        </svg>
      </span>
    </button>
  </div>
</span>
`;
